Redux display product
Fixade så att "product" componenterna nu displayar produkterna ifrån redux istället för att göra en axios "get"när man navigerar runt i hemsidan. Alla cards är inte fixade än men nu är grunden fixad iallafall.

--- a/e-commerce/src/components/products/SalesCard.css
+++ b/e-commerce/src/components/products/SalesCard.css
@@ -26,7 +26,7 @@
 .product-page-card-picture{
     width: 255px;
     height: 210px;
-    background-color: #F7F8FA;
+    /* background-color: #F7F8FA; */
 }
 
 .product-page-card .fa-star {
