--- a/e-commerce/src/views/styles/ProductPage.css
+++ b/e-commerce/src/views/styles/ProductPage.css
@@ -35,14 +35,15 @@ body {
 }
 
 /* All Categories CSS */
-.product-page .all-categories{
+.all-categories{
 display: flex;
 flex-direction: column;
 justify-content: flex-start;
 }
-.product-page .border{
+.border{
     border-bottom: 2px solid #61636541;
     padding-bottom: 5px;
+    margin-bottom: 15px;
 }
 .all-categories-examples {
     display: flex;
@@ -56,11 +57,12 @@ justify-content: flex-start;
 }
 
 /* Price */
-.product-page .price{
+.price{
     display: flex;
+    /* justify-content: center; */
     flex-direction: column;
 }
-.product-page .price .slider {
+.price .slider {
     background-color: red;
 }
 
@@ -70,7 +72,7 @@ justify-content: flex-start;
     flex-direction: column;
     justify-content: flex-start;
     }
-.product-page .size-choices {
+.size-choices {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -86,7 +88,7 @@ justify-content: flex-start;
     flex-direction: column;
     justify-content: flex-start;
     }
-.product-page .checkbox-colors {
+.checkbox-colors {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -94,22 +96,22 @@ justify-content: flex-start;
 
         
 }
-.product-page .checkbox-colors label{
+.checkbox-colors label{
     font-weight: 500;
     color: var(--pp-clr-gray);
 
         
 }
-.product-page .checkbox {
+.checkbox {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
 
 }
-.product-page .checkbox-input{
+.checkbox-input{
     display: none;
 }
-.product-page .checkbox-box{
+.checkbox-box{
     width: 1em;
     height: 1em;
     border: 1.9px solid var(--pp-clr-gray);
@@ -119,34 +121,34 @@ justify-content: flex-start;
     margin-right: 7px;
     flex-shrink: 0;
 }
-.product-page .checkbox-box::after {
+.checkbox-box::after {
     color: red;
 
 }
-.product-page .checkbox-input:checked + .checkbox-box {
+.checkbox-input:checked + .checkbox-box {
     background-color: #FF7373;
 }
 
 
 
-.product-page .brands{
+.brands{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-.product-page .brands-choices {
+.brands-choices {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding-left: 15px;
         
 }
-.product-page .brands-choices h2{
+.brands-choices h2{
     margin: 0;
 }
 
 
-.product-page .checkbox-colors{
+.checkbox-colors{
     display: flex;
     flex-direction: column;
 }
@@ -155,7 +157,7 @@ justify-content: flex-start;
 
 
 /* Product Page Cards Wrap */
-.product-page .center-align{
+.center-align{
     display: flex;
     justify-content: center;
 }
@@ -173,6 +175,8 @@ justify-content: flex-start;
     width: 825px;
     align-items: center;
     justify-content: space-between;
+
+    
 }
 .product-page-listings{
     display: flex;
@@ -182,7 +186,7 @@ justify-content: flex-start;
     justify-content: center;
 }
 /* Sorting Options */
-.product-page .sorting-options{
+.sorting-options{
     width: 240px;
     height: 40px;
     font-weight: 500;
@@ -193,9 +197,11 @@ justify-content: flex-start;
 }
 
 /* Show Options */
-.show-options-label {
+.show-options-label
+{
     color: #616365;
     font-weight: 500;
+    
 }
 .show-options-select{
     width: 54px;
@@ -210,23 +216,22 @@ justify-content: flex-start;
 
 
 /* Pagination */
-.product-page .pagination {
+.pagination {
    display: inline-flex;
    justify-content: center;
    align-items: ce;
    margin-bottom: 50px;
 }
-
-.product-page .pagination a {
+  
+.pagination a {
     display: flex;
     justify-content: center;
-    align-items: center;
     color: #616365;
+    padding: 10px 10px;
     text-decoration: none;
     transition: #FF7373 .3s;
     background-color: #F4F4F4;
-    border-radius: 50%;
-    padding: 1rem;
+    border-radius: 1000px;
     margin: 10px;
     width: 25px;
     height: 25px;
@@ -241,11 +246,14 @@ justify-content: flex-start;
 .pagination a:hover:not(.active) {
     background-color: #F4F4F4;
 }
+.pagination a{
+    box-sizing: content-box;
+}
 
 
 
 /* Slider css */
-.product-page .price{
+.price{
     margin-bottom: 25px;
 }
 
@@ -255,9 +263,15 @@ justify-content: flex-start;
     .product-page{
         margin-right: 50px;
     }
+
+
+  
 }
 
 @media (max-width: 1200px) {
+    /* ...
+    // rules here apply to devices from 993px to 1200px (inclusive)
+    ... */
     .product-page-div{
         width: 1000px;
     }
@@ -281,15 +295,24 @@ justify-content: flex-start;
     .product-page-ind-filters{
         width: 210px;
     }
-}
+    
 
+}
 @media (max-width: 992px) {       
+    /* // rules here apply to devices from 769px to 992px (inclusive)
+    ... */
     .product-page-div{
         width: 600px;
     }
-}
+    
+    
+    
 
+}
 @media (max-width: 768px) {
+    /* ...
+    // rules here apply to devices from 0px to 768px (inclusive)
+    ... */
     .product-page-filter{
         width: 500px;
         margin-left: 0px;
@@ -297,9 +320,12 @@ justify-content: flex-start;
     .sorting-options{
         width: 200px;
     }
-}
 
+}
 @media (max-width: 600px) {
+    /* ...
+    // rules here apply to devices from 0px to 768px (inclusive)
+    ... */
     .product-page-filter{
         flex-direction: column;
         width: 340px;
@@ -313,4 +339,9 @@ justify-content: flex-start;
     .product-page-div{
         width: 300px;
     }
+
 }
+
+
+
+
